--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,11 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
